Fix rotating leader on mobile, fix pixture-tile generator

--- a/themes/norton/inc/css/media-queries.css
+++ b/themes/norton/inc/css/media-queries.css
@@ -135,7 +135,15 @@
         font-size: 23px;
     }    
     
+    .rotating-leader-caption h2 {
+        font-size: 14px !important;
+        line-height: 24px;
+    }
     
+    .project-link {
+        top: 20px !important;
+        font-size: 12px !important;
+    }
     
     
 }
